--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "author": "Jack Hutchinson",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.9.2",
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^26.0.13",
     "@types/node": "17.0.4",
