--- a/package.json
+++ b/package.json
@@ -7,6 +7,14 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.9.2",
+    "axios": "^0.27.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "styled-components": "5.3.5",
+    "typescript": "^4.7.3"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^26.0.13",
     "@types/node": "17.0.4",
@@ -15,7 +23,6 @@
     "@types/styled-components": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
-    "axios": "^0.27.2",
     "eslint": "^7.20.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
@@ -23,11 +30,8 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest-styled-components": "^7.0.3",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-scripts": "^5.0.1",
-    "styled-components": "5.3.5",
-    "typescript": "^4.7.3"
+    "prettier": "^2.7.1",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,9 +50,15 @@
       "last 1 safari version"
     ]
   },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
   "prettier": {
     "printWidth": 95,
-    "tabWidth": 2,
+    "tabWidth": 1,
     "useTabs": true,
     "semi": true,
     "singleQuote": true,
@@ -56,8 +66,5 @@
     "bracketSpacing": true,
     "jsxBracketSameLine": false,
     "fluid": false
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.4"
   }
 }
