--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,6 @@
       "dom.iterable",
       "esnext"
     ],
-    "types": [
-      "node",
-      "jest",
-      "@testing-library/jest-dom"
-    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -26,6 +21,10 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": [
-    "src"
+    "src/**/*.{tsx,ts}"
+  ],
+  "exclude": [
+    "node_modules",
+    "src/**/*.test.tsx"
   ]
 }
