--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.9.2",
     "axios": "^0.27.2",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "styled-components": "5.3.5",
     "typescript": "^4.7.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^26.0.13",
     "@types/node": "17.0.4",
     "@types/react": "^18.0.11",
