--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.9.2",
     "axios": "^0.27.2",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "5.3.5",
@@ -18,6 +19,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^26.0.13",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "17.0.4",
     "@types/react": "^18.0.11",
     "@types/react-dom": "18.0.5",
